# mesh-reducer

./: Cargo.toml  README.md  mesh_reducer.pyi  pyproject.toml  stl_reducer.pyi
.github/workflows/: release.yml
src/: lib.rs  loader.rs  mesh_object.rs  progess.rs  sampling.rs
src/loaders/: mod.rs  obj.rs  ply.rs  step.rs  stl.rs
tests/: reading.py
