[package]
name = "mesh-reducer"
version = "1.0.3"
authors = ["vffuunnyy <vffuunnyy@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"

[lib]
name = "mesh_reducer"
crate-type = ["cdylib"]

[dependencies]
# stl_io = "0.8.2"
# obj-rs = "0.7.4"
# ply-rs = "0.1.3"
modelz = { version = "0.1.5", features = ["obj", "stl", "ply"] }

rand = "0.8.4"
pyo3 = { version = "0.22.6", features = ["extension-module"] }
rayon = "1.7"
dashmap = "6.1.0"
