[package]
name = "mesh-reducer"
version = "2.0.1"
authors = ["vffuunnyy <vffuunnyy@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"

[lib]
name = "mesh_reducer"
crate-type = ["cdylib"]

[dependencies]
modelz = { version = "0.1.5", features = ["obj", "stl", "ply"] }
rand = "0.8.4"
pyo3 = { version = "0.23.1", features = ["extension-module"] }
rayon = "1.7"
indicatif = {version="0.17.9", features = ["rayon"]}
